--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1 {text-align: center;}
 <div class="center" class="p2" style="font-size:190%;">If you are knowledgable, risks are less</div>
 <div class="middle" class="p2" style="text-align:center;">Our group, Among Us, thinks of a way in order to spread awareness and information about Coronavirus. 
 Yes, it is a workshop. Each box contains description of each category. <br> Our workshop will contain:</div>
-<a href="purposeoftheworkshop.html"><img src="purposebox.png" alt="Purpose of the Workshop" style="position:absolute; TOP:600px; LEFT:300px; WIDTH:500px; HEIGHT:300px"></a>
+<a href="Purposeoftheworkshop.html"><img src="purposebox.png" alt="Purpose of the Workshop" style="position:absolute; TOP:600px; LEFT:300px; WIDTH:500px; HEIGHT:300px"></a>
 <a href="IntroductionToCovid19.html"><img src="introbox.png" alt="IntroductionToCovid19" style="position:absolute; TOP:600px; LEFT:650px; WIDTH:500px; HEIGHT:300px"></a>
 <a href="EffectsOfCovid19.html"><img src="effectsbox.png" alt="Effects of Covid19" style="position:absolute; TOP:920px; LEFT:300px; WIDTH:500px; HEIGHT:300px"></a>
 <a href="BeAwareOfCovid19.html"><img src="awarebox.png" alt="Be Aware of Covid19" style="position:absolute; TOP:920px; LEFT:650px; WIDTH:500px; HEIGHT:300px"></a>
